# ifk-python-template

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  README.md  README.md.jinja  copier.yaml  mkdocs.yml  mkdocs.yml.jinja  pyproject.toml  pyproject.toml.jinja
.github/workflows/: github-action-build.yaml  github-action-build.yaml.jinja  github-action-docs.yaml  github-action-docs.yaml.jinja  github-action-lint.yaml  github-action-lint.yaml.jinja  github-action-md-lint.yaml  github-action-md-lint.yaml.jinja  github-action-pypi.yaml.jinja  github-action-test.yaml.jinja  github-action-type.yaml  github-action-type.yaml.jinja
docs/: index.md  index.md.jinja
src/python_template/: temp.py
src/{{package_name}}/: {{module_name}}.py.jinja
tests/: test_unit.py  test_unit.py.jinja
