[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ifk-python-template"
version = "0.1.0"
description = "IFK python template."
license = { text = "MIT" }
readme = "README.md"
authors = [
    { name = "Mladen Gibanica", email = "11275336+mgcth@users.noreply.github.com" },
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
lint = [
    "ruff ~= 0.1",
]
type = ["mypy ~= 0.990", "types-requests ~= 2.28", "pandas-stubs ~= 1.5"]
test = ["pytest ~= 7.1", "coverage ~= 6.5", "pytest-cov ~= 4.0"]
doc = [
    "mkdocs ~= 1.4",
    "mkdocs-material ~= 8.5",
    "mkdocstrings[python] ~= 0.19",
]
dev = [
    "ifk-python-template[lint]",
    "ifk-python-template[type]",
    "ifk-python-template[test]",
    "ifk-python-template[doc]",
    "pre-commit ~= 2.20",
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["material"]

[tool.ruff]
line-length = 88
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "W", "F", "B", "D", "I", "S"]
ignore = ["S101"]
unfixable = ["B", "S"]